Fix non-wrapping flexbox for firefox

--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,7 @@ a:hover {
 
 .flex-container {
     display: -webkit-flex;
+    display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
